--- a/.gitea/workflows/test.yaml
+++ b/.gitea/workflows/test.yaml
@@ -6,26 +6,41 @@ jobs:
   Explore-Gitea-Actions:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13' 
+
+      - uses: syphar/restore-virtualenv@v1
+        id: cache-virtualenv
+
+      - run: pip install -r requirements.txt
 
       - name: Generate git log
         run: git --no-pager log --pretty=format:"%H%x09%an%x09%x09%s" > git_log.txt
 
       - name: Generate embassy score manifest
         run: python AUTOMATIONS/score_embassies.py ${{vars.RepositoryNation}}
-      
+
       - name: Generate Embassy Protocol Dispatch
         run: |
           hash=${{env.GITHUB_SHA}}
-          python AUTOMATIONS/embassy_protocol_dispatch.py ${{hash::10}} ${{vars.EmbassyIndexDispatchID}}
+          python AUTOMATIONS/embassy_protocol_dispatch.py ${hash:10} ${{vars.EmbassyIndexDispatchID}}
 
       - name: Upload Embassy Protocol Dispatch
-        run: python AUTOMATIONS/embassy_protocol_dispatch.py ${{vars.RepositoryNation}} ${{vars.EmbassyIndexDispatchID}} PUBLIC/GRANTED_EMBASSY_PROTOCOLS.SZD ${{secrets.RepositoryNationPassword}}
+        if: ${{ hashFiles('PUBLIC/GRANTED_EMBASSY_PROTOCOLS.SZD') != '' }}
+        run: python AUTOMATIONS/upload_dispatch.py ${{vars.RepositoryNation}} ${{vars.EmbassyIndexDispatchID}} PUBLIC/GRANTED_EMBASSY_PROTOCOLS.SZD ${{secrets.RepositoryNationPassword}}
 
       - name: Archive Data
+        if: '!cancelled()'
         uses: actions/upload-artifact@v3
-          name: S0_Manifests
+        with:
+          name: Manifests
           path: |
             PRIVATE/
             PUBLIC/
